# tibia-pvp-api

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  app.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  controllers.py  models.py  routes.py  serializer.py
app/templates/: index.html  show_skulls.html
static/: estilo.css
templates/: index.html
